# drift-simulation

./: .gitignore  CMakeLists.txt  README.md
res/shaders/: fragment.shader  geometry.shader  vertex.shader
src/: index_buffer.cpp  index_buffer.h  input.h  main.cpp  noise.h  renderer.cpp  renderer.h  shader.cpp  shader.h  vertex_array.cpp  vertex_array.h  vertex_buffer.cpp  vertex_buffer.h  vertex_buffer_layout.h
